Fix overflow of forward search pairs. Change scrollbar look.

--- a/src/sass/components/_settings.scss
+++ b/src/sass/components/_settings.scss
@@ -133,13 +133,12 @@
           }
         }
         .searchbar-settings-forward-search-container {
-          overflow-y: scroll;
           grid-area: forward;
           display: grid;
           grid-template-areas: "title ." "input ." "values values";
           grid-template-columns: 1fr 1fr;
           column-gap: 1rem;
-          grid-template-rows: 0.5fr 1fr 8fr;
+          grid-template-rows: minmax(0, 30px) minmax(0, 60px) minmax(0, 400px);
           row-gap: 2rem;
           .forward-search-input-container {
             grid-area: input;
@@ -159,11 +158,25 @@
             }
           }
           .forward-search-values-container {
-            padding-left: 3rem;
             grid-area: values;
             font-family: MontSerratExtraLight;
+            display: flex;
+            align-content: flex-start;
+            flex-wrap: wrap;
+            overflow-y: scroll;
+            &::-webkit-scrollbar {
+              width: 8px;
+              background-color: darken($white, 40);
+            }
+            &::-webkit-scrollbar-thumb {
+              background-color: $white;
+            }
+            scrollbar-color: $white darken($white, 40);
+            scrollbar-width: thin;
             .forward-search-value-wrapper {
-              width: calc(50% - 2rem);
+              height: 64px;
+              flex: 0 0 calc(50% - 0.5rem);
+              padding-left: 3rem;
               display: grid;
               grid-template-columns: 2fr 1fr 2.5fr 0.5fr;
               .search-value {
@@ -178,12 +191,16 @@
               }
             }
           }
-
           .forward-search-button {
             color: $white;
             background-color: inherit;
             border: none;
             font-size: 1.2rem;
+
+            &:disabled {
+              color: lighten($dark, 15);
+              cursor: default;
+            }
           }
         }
       }
